fix(comp:table): scrollbar always appear, when scroll.width is set

--- a/packages/components/table/style/size.less
+++ b/packages/components/table/style/size.less
@@ -46,7 +46,7 @@
     width: 32px;
   }
 
-  .@{table-prefix}-col-selectable&-selectable-with-dropdown {
+  .@{table-prefix}-col-selectable&-col-with-dropdown {
     width: 52px;
   }
 }
@@ -59,7 +59,7 @@
     width: 40px;
   }
 
-  .@{table-prefix}-col-selectable&-selectable-with-dropdown {
+  .@{table-prefix}-col-selectable.@{table-prefix}-col-with-dropdown {
     width: 60px;
   }
 }
@@ -72,7 +72,7 @@
     width: 48px;
   }
 
-  .@{table-prefix}-col-selectable&-selectable-with-dropdown {
+  .@{table-prefix}-col-selectable.@{table-prefix}-col-with-dropdown {
     width: 68px;
   }
 }
